implemented parallax and tweaked header

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #166153;
+  background-color: #130c01;
 }
 article,
 aside,
