products section complete

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #130c01;
+  background-color: #746044;
 }
 article,
 aside,
